--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Logs
-logs
-*.log
+**/**.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -138,3 +137,5 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+/src/generated/prisma
