--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
     "test": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^6.19.0",
     "socket.io": "^4.8.1",
     "winston": "^3.18.3"
