--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "test": "nodemon src/index.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -34,7 +36,11 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
+    "passport-google": "^0.3.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-microsoft": "^2.1.0",
     "prisma": "^6.19.0",
     "socket.io": "^4.8.1",
     "winston": "^3.18.3"
